fixed headers and added why-section 'invisible' header

--- a/src/css/sass/_why.scss
+++ b/src/css/sass/_why.scss
@@ -3,10 +3,12 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   max-width: 1440px;
   background: #71cc98;
-  gap: 60px;
-  padding: 80px 30px 80px 30px;
+  gap: 30px;
+  padding: 40px 30px 80px 30px;
+  flex-direction: column;
 
   @media screen and (max-width: 640px) {
     padding: 80px 16px 80px 16px;
@@ -22,8 +24,13 @@
     border-radius: 40px;
     margin: 0.5rem 1rem;
     min-width: 320px;
-    max-width: 370px;
+    max-width: 390px;
     box-shadow: 10px 10px 0px #00000026;
+
+    &-container{
+      display: flex;
+
+    }
 
     &-img {
       width: 3rem;
